logging/elasticsearch/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ${kibana_ingress_dns}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-efk-kb-http 
                port:
                  number: 5601
  tls:
    - hosts:
        - ${kibana_ingress_dns}
      secretName: kibana-logging
